# struct2tensor

./: .gitignore  meson.build  pyproject.toml
struct2tensor/: meson.build
struct2tensor/benchmarks/: meson.build
struct2tensor/expression_impl/: meson.build
struct2tensor/kernels/: meson.build
struct2tensor/ops/: meson.build
