[build-system]
requires = [
    "tensorflow>=2.15,<2.16",
    "meson-python",
]
build-backend = "mesonpy"

[project]
name = "struct2tensor"
dynamic = ["version"]
description = "Struct2Tensor is a package for parsing and manipulating structured data for TensorFlow"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Google LLC", email = "tensorflow-extended-dev@googlegroups.com" }
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Intended Audience :: Education',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Scientific/Engineering :: Mathematics',
    'Topic :: Software Development',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules',
]
keywords = ["tensorflow", "protobuf", "machine", "learning"]
requires-python = ">=3.9,<3.12"
dependencies = [
    "numpy>=1.22",
    'protobuf>=4.25.2,<5;python_version>="3.11"',
    'protobuf>=3.20.3,<5;python_version<"3.11"',
    'tensorflow>=2.15,<2.16',
    'tensorflow-metadata>=1.15.0,<1.16.0',
    'pyarrow>=10,<11'
]

[tool.setuptools.dynamic]
version = {attr = "struct2tensor.__version__"}  # any module attribute compatible with ast.literal_eval

[project.urls]
Repository = "https://github.com/google/struct2tensor"

[tool.pytest.ini_options]
python_files = "*_test.py"
