py.install_sources(
  [
      '__init__.py',
      'apply_schema.py',
      'apply_schema_test.py',
      'broadcast.py',
      'broadcast_test.py',
      'depth_limit.py',
      'depth_limit_test.py',
      'filter_expression.py',
      'filter_expression_test.py',
      'index.py',
      'index_test.py',
      'map_prensor.py',
      'map_prensor_test.py',
      'map_prensor_to_prensor.py',
      'map_prensor_to_prensor_test.py',
      'map_values.py',
      'map_values_test.py',
      'parquet.py',
      'parquet_test.py',
      'parse_message_level_ex.py',
      'parse_message_level_ex_test.py',
      'placeholder.py',
      'placeholder_test.py',
      'project.py',
      'project_test.py',
      'promote.py',
      'promote_and_broadcast.py',
      'promote_and_broadcast_test.py',
      'promote_test.py',
      'proto.py',
      'proto_test.py',
      'proto_test_util.py',
      'raw_parquet_dataset_test.py',
      'reroot.py',
      'reroot_test.py',
      'size.py',
      'size_test.py',
      'slice_expression.py',
      'slice_expression_test.py',
  ],
  subdir: 'struct2tensor/expression_impl',
  pure: false
)
